--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <h5 class="card-title">Clothes-Clothes-Clothes</h5>
                         <p class="card-text">E-commerce de ropa de segunda mano. Rol: Backend and Fronted Developer</p>
                         <div class="d-flex justify-content-center">
-                            <a href="#" class="btn botones backend">Ver Proyecto</a><a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank" class="btn botones">Ver API</a>
+                            <a href="https://github.com/LinaAlvaradoSosa/Clothes-Angular" class="btn botones backend" target="_blank">Ver Proyecto</a><a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank" class="btn botones">Ver API</a>
                         </div>
                     </div>
                 </div>
