--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav>
             <div class="contenedor">
                 <img class="logo" src="./Logo.png" alt="">
+                <button class="hamburguesa" id="hamburguesa">☰</button>
                 <div class="info">
                     <div>About me</div>
                     <div>Projects</div>
@@ -112,6 +113,14 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+    <script>
+        const boton = document.getElementById('hamburguesa');
+        const menu = document.querySelector('.info');
+        boton.addEventListener('click', () => {
+            menu.classList.toggle('activo');
+        });
+    </script>
 </body>
 </html>
