--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section>
         <div class="box">
             <div class="aboutMe">
-                <h1 class="name">LINA ALVARADO&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: gray;">DEV</span></h1>
+                <h1 class="name">LINA <span class="Alva" >ALVARADO</span></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: gray;" class="Dev">DEV</span></h1>
                 <div class="career">NodeJs | JavaScript | MongoDB | GitHub | Angular | TypeScript | API | Figma | Boostrap | English (B2)</div>
             </div>
         </div>
