--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
     <section>
         <div class="box">
             <div class="aboutMe">
-                <h1 class="name">LINA <span class="Alva" >ALVARADO</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color: gray;" class="Dev">DEV</span></h1>
+                <div class="name-dev">
+                    <div class="responsive">
+                        <div class="d-flex contenedorNegro">
+                            <p class="name2">LINA </p>
+                            <p style="color: gray;" class="dev2">DEV</p>
+                        </div>
+                        <p class="Alva2"> ALVARADO</p>
+                    </div>
+                    <h1 class="name">LINA</h1>
+                    <div class="Alva">ALVARADO</div>
+                    <div style="color: gray;" class="dev">DEV</div>
+                </div>
                 <div class="career">NodeJs | JavaScript | MongoDB | GitHub | Angular | TypeScript | API | Figma | Boostrap | English (B2)</div>
             </div>
         </div>
@@ -50,53 +61,62 @@
                 </p>
             </div>
             <div class="photoLina">
-                <img src="./LinaClarinet.png" class="d-block w-100 photoLina" alt="...">
+                <img src="./Diving.JPG" class="d-block w-100 photoLina" alt="...">
             </div>
         </div>
-        <!-- opcion 1 para las cards -->
+        <!-- comienzo de las cards -->
         <div class="projects-body">
             <div class="Projects">PROJECTS</div>
-            <div class="cartas">
-                <div class="card" style="width: 18rem;">
-                    <img src="./Inmobiliaria-Blonplad.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Inmobiliaria Blonplad</h5>
-                        <p class="card-text">Proyecto para IdForIdeas. Rol: Backend Developer</p>
-                        <div class="d-flex justify-content-center">
-                            <a href="https://bonpland.vercel.app/" class="btn  botones backend" target="_blank">Ver Proyecto</a><a href="https://github.com/LinaAlvaradoSosa/Bonpland"  target="_blank" class="btn botones">Ver API</a>
+            <div class="grid-container">
+                <!-- Card 1 -->
+                <div class="card">
+                    <img src="./Inmobiliaria-Blonplad.png" alt="Proyecto 1" />
+                    <div class="card-content">
+                        <h3>Inmobiliaria Blonplad</h3>
+                        <p>Proyecto para IdForIdeas. Rol: Backend Developer</p>
+                        <div class="card-buttons">
+                            <a href="https://bonpland.vercel.app/" target="_blank"><button class="btn1">Ver proyecto</button></a>
+                            <a href="https://github.com/LinaAlvaradoSosa/Bonpland" target="_blank"><button class="btn-secondary">Ver API</button></a>
                         </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="./Trucupey-pantallazo.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Trucupey</h5>
-                        <p class="card-text">E-commerce para Juanchito Trucupey. Rol: Backend and Fontend Developer</p>
-                        <div class="d-flex justify-content-center">
-                            <a href="https://github.com/LinaAlvaradoSosa/Trucupey-Angular" target="_blank" class="btn botones backend">Ver Angular</a><a href="https://github.com/LinaAlvaradoSosa/Trucupey-API" target="_blank" class="btn botones">Ver API</a>
+                <!-- Card 2 -->
+                <div class="card">
+                    <img src="./Trucupey-pantallazo.png" alt="Proyecto 2" />
+                    <div class="card-content">
+                        <h3>Trucupey</h3>
+                        <p>E-commerce para Juanchito Trucupey. Rol: Backend and Fontend Developer</p>
+                        <div class="card-buttons">
+                            <a href="https://github.com/LinaAlvaradoSosa/Trucupey-Angular" target="_blank"><button class="btn1">Ver proyecto</button></a>
+                            <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary">Ver API</button></a>
                         </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="./Clothes-Clothes-Clothes.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Clothes-Clothes-Clothes</h5>
-                        <p class="card-text">E-commerce de ropa de segunda mano. Rol: Backend and Fronted Developer</p>
-                        <div class="d-flex justify-content-center">
-                            <a href="https://github.com/LinaAlvaradoSosa/Trucupey-Angular" class="btn botones backend" target="_blank">Ver Proyecto</a><a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank" class="btn botones">Ver API</a>
+                <!-- Card 3 -->
+                <div class="card">
+                    <img src="./Clothes-Clothes-Clothes.png" alt="Proyecto 3" />
+                    <div class="card-content">
+                        <h3>Clothes-Clothes-Clothes</h3>
+                        <p>E-commerce de ropa de segunda mano. Rol: Backend and Fronted Developer</p>
+                        <div class="card-buttons">
+                        <a href="https://github.com/LinaAlvaradoSosa/Trucupey-Angular" target="_blank"><button class="btn1">Ver pryecto!!</button></a>
+                        <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary" target="_blank">Ver API</button></a>
                         </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="./emaill.jpeg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Aplicacion automatica</h5>
-                        <p class="card-text">Aplicacion creada para envio de mensajes/notificaciones automaticos </p>
-                        <div class="d-flex justify-content-center">
-                            <a href="https://github.com/LinaAlvaradoSosa/notificaciones" target="_blank" class="btn botones">Ver API</a>
+                <!-- Card 4 -->
+                <div class="card">
+                    <img src="./emaill.jpeg" alt="Proyecto 4" />
+                    <div class="card-content">
+                        <h3>Aplicacion automatica</h3>
+                        <p>Aplicacion creada para envio de mensajes/notificaciones automaticos</p>
+                        <div class="card-buttons">
+                        <a href="https://github.com/LinaAlvaradoSosa/notificaciones" target="_blank"><button class="btn-secondary">Ver API</button></a>
                         </div>
                     </div>
+                </div>
             </div>
+            <!-- //fin cards/ -->
         </div>        
     </section>
     <footer>
