--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <header>
         <nav>
             <div class="contenedor">
-                <img class="logo" src="./Logo.png" alt="">
+                <a class="navLink" href="#presentacion"><img class="logo" src="./logo.png" alt=""></a>
                 <button class="hamburguesa" id="hamburguesa">☰</button>
                 <div class="info">
-                    <div>About me</div>
-                    <div>Projects</div>
-                    <div>Contact</div>
+                    <div class="navLink"><a href="#aboutMe" class="linksNav">About me</a></div>
+                    <div class="navLink"><a href="#cards" class="linksNav">Projects</a></div>
+                    <div class="navLink"><a href="#contacto" class="linksNav">Contact</a></div>
                 </div>
                 <div class="redes">
-                    <a href="mailto:hellolinita@gmail.com" target="_blank"><img class="social-footer" src="./correo-electronico.png" alt="Correo electrónico"></a>
-                    <a href="https://github.com/LinaAlvaradoSosa" target="_blank"><img class="social-footer" src="./github.png"  alt="GitHub"></a>
-                    <a href="https://www.linkedin.com/in/linaalvaradososa-developer-fullstack/" target="_blank"><img class="social-footer" src="./social.png" alt="LinkedIn"></a>
+                    <a href="mailto:hellolinita@gmail.com" target="_blank"><img class="social-footer navLink" src="./correo-electronico.png" alt="Correo electrónico"></a>
+                    <a href="https://github.com/LinaAlvaradoSosa" target="_blank"><img class="social-footer navLink" src="./github.png"  alt="GitHub"></a>
+                    <a href="https://www.linkedin.com/in/linaalvaradososa-developer-fullstack/" target="_blank"><img class="social-footer navLink" src="./social.png" alt="LinkedIn"></a>
                 </div>
             </div>
         </nav>
     </header>
-    <section>
+    <section id="presentacion">
         <div class="box">
             <div class="aboutMe">
                 <div class="name-dev">
@@ -44,6 +44,8 @@
                 <div class="career">NodeJs | JavaScript | MongoDB | GitHub | Angular | TypeScript | API | Figma | Boostrap | English (B2)</div>
             </div>
         </div>
+    </section>
+    <section id="aboutMe">    
         <div class="about-me">
             <div class="aboutText">
                 <h2 class="about-me2">ABOUT ME</h2>
@@ -64,7 +66,8 @@
                 <img src="./Diving.JPG" class="d-block w-100 photoLina" alt="...">
             </div>
         </div>
-        <!-- comienzo de las cards -->
+    </section>
+    <section id="cards">    <!-- comienzo de las cards -->
         <div class="projects-body">
             <div class="Projects">PROJECTS</div>
             <div class="grid-container">
@@ -119,20 +122,22 @@
             <!-- //fin cards/ -->
         </div>        
     </section>
-    <footer>
-        <div class="contact">Let's talk!</div>
-        <div>
-            <div class="footer-2">
-                <a href="https://www.linkedin.com/in/linaalvaradososa-developer-fullstack/" target="_blank"><img class="social-footer" src="./social.png" alt="LinkedIn"></a>
-                <a href="https://github.com/LinaAlvaradoSosa" target="_blank"><img class="social-footer" src="./github.png"  alt="GitHub"></a>
-                <a href="mailto:hellolinita@gmail.com" target="_blank"><img class="social-footer" src="./sobre1.png" alt="Correo electrónico"></a>
+    <section id="contacto">
+        <footer>
+            <div class="contact">Let's talk!</div>
+            <div>
+                <div class="footer-2">
+                    <a href="https://www.linkedin.com/in/linaalvaradososa-developer-fullstack/" target="_blank"><img class="social-footer" src="./social.png" alt="LinkedIn"></a>
+                    <a href="https://github.com/LinaAlvaradoSosa" target="_blank"><img class="social-footer" src="./github.png"  alt="GitHub"></a>
+                    <a href="mailto:hellolinita@gmail.com" target="_blank"><img class="social-footer" src="./sobre1.png" alt="Correo electrónico"></a>
+                </div>
+                <div class="logo-container">
+                    <a href="#presentacion"><img class="logo-footer navLink" src="./Logo2.png" alt=""></a>
+                    <div class="info-final">Thank you for visiting my portfolio</div>
+                </div>
             </div>
-            <div class="logo-container">
-                <img class="logo-footer" src="./Logo2.png" alt="">
-                <div class="info-final">Thank you for visiting my portfolio</div>
-            </div>
-        </div>
-    </footer>
+        </footer>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
     <script>
