--- a/index.html
+++ b/index.html
@@ -32,16 +32,22 @@
                 <div class="name-dev">
                     <div class="responsive">
                         <div class="d-flex contenedorNegro">
-                            <p class="name2">LINA </p>
+                            <p class="name2">LINA ALVARADO</p>
                             <p style="color: gray;" class="dev2">DEV</p>
                         </div>
-                        <p class="Alva2"> ALVARADO</p>
                     </div>
-                    <h1 class="name">LINA</h1>
+                    <div class="responsive2">
+                        <div class="contenedorNegro3">
+                            <div class="name3">LINA</div>
+                            <div style="color: gray;" class="dev3">DEV</div>
+                        </div>
+                        <div class="Alva3">ALVARADO</div>
+                    </div>
+                    <div class="name">LINA</div>
                     <div class="Alva">ALVARADO</div>
                     <div style="color: gray;" class="dev">DEV</div>
                 </div>
-                <div class="career">NodeJs | JavaScript | MongoDB | GitHub | Angular | TypeScript | API | Figma | Boostrap | English (B2)</div>
+                <div class="career">NodeJs | ExpressJS | JavaScript | MongoDB | GitHub | Angular | TypeScript | API | Figma | Boostrap | English (B2)</div>
             </div>
         </div>
     </section>
