--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio</title>
+    <link rel="icon" type="image/png" href="./logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -95,7 +96,7 @@
                         <h3>Clothes-Clothes-Clothes</h3>
                         <p>E-commerce de ropa de segunda mano. Rol: Backend and Fronted Developer</p>
                         <div class="card-buttons">
-                        <a href="https://github.com/LinaAlvaradoSosa/Trucupey-Angular" target="_blank"><button class="btn1">Ver pryecto!!</button></a>
+                        <a href="https://clothesclothesclothes.netlify.app/" target="_blank"><button class="btn1">Ver proyecto</button></a>
                         <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary" target="_blank">Ver API</button></a>
                         </div>
                     </div>
