--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
             <div class="aboutText">
                 <h2 class="about-me2">ABOUT ME</h2>
                 <p class="description">
-                    ¡Hola! Soy Lina Alvarado Sosa, psicóloga en transición al mundo del desarrollo web. 
-                    Me apasiona crear soluciones digitales que conecten con las personas. Actualmente me 
-                    especializo en backend con Node.js y también estoy aprendiendo React. 
-                    ¡Bienvenido a mi espacio!
+                    Psychologist and Fullstack Developer, bilingual (English B2). I am a Web Developer with strong
+                    analytical and creative skills, focusing on user experience, responsive design, and with expertise
+                    in performance optimization and accessibility.
                 </p>
                 <p class="description">
-                    ¡Hola! Soy Lina Alvarado Sosa, psicóloga en transición al mundo del desarrollo web. 
-                    Me apasiona crear soluciones digitales que conecten con las personas. Actualmente me 
-                    especializo en backend con Node.js y también estoy aprendiendo React. 
-                    ¡Bienvenido a mi espacio!
+                    I have worked on website creation projects such as Trucupey, Bonpland, Clothes-Clothes-Clothes,
+                    where I have demonstrated my skills in API creation, database management, and frontend development
+                    using Angular as a framework. Psychology has provided me with soft skills such as empathy, 
+                    assertive communication, and long-term relationship building. I am proficient in tools like HTML,
+                    CSS, GitHub, Angular, MongoDB, and languages such as JavaScript and TypeScript
                 </p>
             </div>
             <div class="photoLina">
