--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <img src="./Inmobiliaria-Blonplad.png" alt="Proyecto 1" />
                     <div class="card-content">
                         <h3>Inmobiliaria Blonplad</h3>
-                        <p>Proyecto para IdForIdeas. Rol: Backend Developer</p>
+                        <p>Project for IdForIdeas. Role: Backend Developer</p>
                         <div class="card-buttons">
                             <a href="https://bonpland.vercel.app/" target="_blank"><button class="btn1">Ver proyecto</button></a>
                             <a href="https://github.com/LinaAlvaradoSosa/Bonpland" target="_blank"><button class="btn-secondary">Ver API</button></a>
@@ -82,7 +82,7 @@
                     <img src="./Trucupey-pantallazo.png" alt="Proyecto 2" />
                     <div class="card-content">
                         <h3>Trucupey</h3>
-                        <p>E-commerce para Juanchito Trucupey. Rol: Backend and Fontend Developer</p>
+                        <p>E-commerce for Juancito Trucupey. Role: Backend and Frontend Developer</p>
                         <div class="card-buttons">
                             <a href="https://github.com/LinaAlvaradoSosa/Trucupey-Angular" target="_blank"><button class="btn1">Ver proyecto</button></a>
                             <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary">Ver API</button></a>
@@ -94,7 +94,7 @@
                     <img src="./Clothes-Clothes-Clothes.png" alt="Proyecto 3" />
                     <div class="card-content">
                         <h3>Clothes-Clothes-Clothes</h3>
-                        <p>E-commerce de ropa de segunda mano. Rol: Backend and Fronted Developer</p>
+                        <p>E-commerce of second-hand clothing. Role: Backend and Fronted Developer</p>
                         <div class="card-buttons">
                         <a href="https://clothesclothesclothes.netlify.app/" target="_blank"><button class="btn1">Ver proyecto</button></a>
                         <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary" target="_blank">Ver API</button></a>
@@ -105,10 +105,10 @@
                 <div class="card">
                     <img src="./emaill.jpeg" alt="Proyecto 4" />
                     <div class="card-content">
-                        <h3>Aplicacion automatica</h3>
-                        <p>Aplicacion creada para envio de mensajes/notificaciones automaticos</p>
+                        <h3>Automatic application</h3>
+                        <p>Application created for sending automatic messages/notifications</p>
                         <div class="card-buttons">
-                        <a href="https://github.com/LinaAlvaradoSosa/notificaciones" target="_blank"><button class="btn-secondary">Ver API</button></a>
+                        <a href="https://notificacionesautomaticas.netlify.app/" target="_blank"><button class="btn-secondary">Probar</button></a>
                         </div>
                     </div>
                 </div>
