pequenas correcciones a ingles

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                         <h3>Inmobiliaria Blonplad</h3>
                         <p>Project for IdForIdeas. Role: Backend Developer</p>
                         <div class="card-buttons">
-                            <a href="https://bonpland.vercel.app/" target="_blank"><button class="btn1">Ver proyecto</button></a>
-                            <a href="https://github.com/LinaAlvaradoSosa/Bonpland" target="_blank"><button class="btn-secondary">Ver API</button></a>
+                            <a href="https://bonpland.vercel.app/" target="_blank"><button class="btn1">Project</button></a>
+                            <a href="https://github.com/LinaAlvaradoSosa/Bonpland" target="_blank"><button class="btn-secondary">API</button></a>
                         </div>
                     </div>
                 </div>
@@ -84,8 +84,8 @@
                         <h3>Trucupey</h3>
                         <p>E-commerce for Juancito Trucupey. Role: Backend and Frontend Developer</p>
                         <div class="card-buttons">
-                            <a href="https://github.com/LinaAlvaradoSosa/Trucupey-Angular" target="_blank"><button class="btn1">Ver proyecto</button></a>
-                            <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary">Ver API</button></a>
+                            <a href="https://github.com/LinaAlvaradoSosa/Trucupey-Angular" target="_blank"><button class="btn1">Project</button></a>
+                            <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary">API</button></a>
                         </div>
                     </div>
                 </div>
@@ -96,8 +96,8 @@
                         <h3>Clothes-Clothes-Clothes</h3>
                         <p>E-commerce of second-hand clothing. Role: Backend and Fronted Developer</p>
                         <div class="card-buttons">
-                        <a href="https://clothesclothesclothes.netlify.app/" target="_blank"><button class="btn1">Ver proyecto</button></a>
-                        <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary" target="_blank">Ver API</button></a>
+                        <a href="https://clothesclothesclothes.netlify.app/" target="_blank"><button class="btn1">Project</button></a>
+                        <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary" target="_blank">API</button></a>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         <h3>Automatic application</h3>
                         <p>Application created for sending automatic messages/notifications</p>
                         <div class="card-buttons">
-                        <a href="https://notificacionesautomaticas.netlify.app/" target="_blank"><button class="btn-secondary">Probar</button></a>
+                        <a href="https://notificacionesautomaticas.netlify.app/" target="_blank"><button class="btn-secondary">Try it!</button></a>
                         </div>
                     </div>
                 </div>
