--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                     <div class="navLink"><a href="#contacto" class="linksNav">Contact</a></div>
                 </div>
                 <div class="redes">
-                    <a href="mailto:hellolinita@gmail.com" target="_blank"><img class="social-footer navLink" src="./correo-electronico.png" alt="Correo electrónico"></a>
+                    <!-- <a href="mailto:hellolinita@gmail.com" target="_blank"><img class="social-footer navLink" src="./correo-electronico.png" alt="Correo electrónico"></a> -->
                     <a href="https://github.com/LinaAlvaradoSosa" target="_blank"><img class="social-footer navLink" src="./github.png"  alt="GitHub"></a>
-                    <a href="https://www.linkedin.com/in/linaalvaradososa-developer-fullstack/" target="_blank"><img class="social-footer navLink" src="./social.png" alt="LinkedIn"></a>
+                    <!-- <a href="https://www.linkedin.com/in/linaalvaradososa-developer-fullstack/" target="_blank"><img class="social-footer navLink" src="./social.png" alt="LinkedIn"></a> -->
                 </div>
             </div>
         </nav>
@@ -121,9 +121,9 @@
             <div class="contact">Let's talk!</div>
             <div>
                 <div class="footer-2">
-                    <a href="https://www.linkedin.com/in/linaalvaradososa-developer-fullstack/" target="_blank"><img class="social-footer" src="./social.png" alt="LinkedIn"></a>
+                    <!-- <a href="https://www.linkedin.com/in/linaalvaradososa-developer-fullstack/" target="_blank"><img class="social-footer" src="./social.png" alt="LinkedIn"></a> -->
                     <a href="https://github.com/LinaAlvaradoSosa" target="_blank"><img class="social-footer" src="./github.png"  alt="GitHub"></a>
-                    <a href="mailto:hellolinita@gmail.com" target="_blank"><img class="social-footer" src="./sobre1.png" alt="Correo electrónico"></a>
+                    <!-- <a href="mailto:hellolinita@gmail.com" target="_blank"><img class="social-footer" src="./sobre1.png" alt="Correo electrónico"></a> -->
                 </div>
                 <div class="logo-container">
                     <a href="#presentacion"><img class="logo-footer navLink" src="./Logo2.png" alt=""></a>
