--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
                 <a class="navLink" href="#presentacion"><img class="logo" src="./logo.png" alt=""></a>
                 <button class="hamburguesa" id="hamburguesa">☰</button>
                 <div class="info">
-                    <div class="navLink"><a href="#aboutMe" class="linksNav">About me</a></div>
-                    <div class="navLink"><a href="#cards" class="linksNav">Projects</a></div>
-                    <div class="navLink"><a href="#contacto" class="linksNav">Contact</a></div>
+                    <div class="navLink"><a href="#aboutMe" class="linksNav">Acerca de</a></div>
+                    <div class="navLink"><a href="#cards" class="linksNav">Projectos</a></div>
+                    <div class="navLink"><a href="#contacto" class="linksNav">Paquetes</a></div>
+                    <div class="navLink"><a href="#contacto" class="linksNav">Contacto</a></div>
                 </div>
                 <div class="redes">
                     <a href="mailto:hellolinita@gmail.com" target="_blank"><img class="social-footer navLink" src="./correo-electronico.png" alt="Correo electrónico"></a> 
@@ -35,25 +36,35 @@
                     <div class="Alva">ALVARADO</div>
                     <div style="color: gray;" class="dev">DEV</div>
                 </div>
-                <div class="career">NodeJs | ExpressJS | JavaScript | MongoDB | GitHub | Angular | TypeScript | API | Figma | Boostrap | English (B2)</div>
+                <div class="career">NodeJs | ExpressJS | JavaScript | MongoDB | GitHub | Angular | TypeScript | API | Figma | Boostrap | English (B2) | SQL | Scrum |</div>
             </div>
         </div>
     </section>
     <section id="aboutMe">    
         <div class="about-me">
             <div class="aboutText">
-                <h2 class="about-me2">ABOUT ME</h2>
+                <h2 class="about-me2">ACERCA DE</h2>
                 <p class="description">
-                    Psychologist and Fullstack Developer, bilingual (English B2). I am a Web Developer with strong
-                    analytical and creative skills, focusing on user experience, responsive design, and with expertise
-                    in performance optimization and accessibility.
+                    Desarrolladora Full Stack, bilingüe (inglés B2). 
+                    Soy desarrolladora web con sólidas habilidades 
+                    analíticas y creativas, enfocada en la experiencia
+                    de usuario, el diseño responsivo y con experiencia
+                    en optimización del rendimiento y accesibilidad. 
+                    Mi experiencia como psicóloga me dio habilidades en
+                    comunicación y entendimiento de necesidades, que 
+                    ahora aplico al crear soluciones web centradas 
+                    en el usuario.
                 </p>
                 <p class="description">
-                    I have worked on website creation projects such as Trucupey, Bonpland, Clothes-Clothes-Clothes,
-                    where I have demonstrated my skills in API creation, database management, and frontend development
-                    using Angular as a framework. Psychology has provided me with soft skills such as empathy, 
-                    assertive communication, and long-term relationship building. I am proficient in tools like HTML,
-                    CSS, GitHub, Angular, MongoDB, and languages such as JavaScript and TypeScript
+                    He trabajado en proyectos de creación de sitios web 
+                    como Trucupey, Bonpland y Clothes-Clothes-Clothes, 
+                    donde he demostrado mis habilidades en la creación 
+                    de API, la gestión de bases de datos y el desarrollo 
+                    frontend utilizando Angular como framework. La psicología
+                    me ha proporcionado habilidades blandas como la empatía, 
+                    la comunicación asertiva y la construcción de relaciones a
+                    largo plazo. Domino herramientas como HTML, CSS, GitHub, 
+                    Angular, MongoDB y lenguajes como JavaScript y TypeScript.
                 </p>
             </div>
             <div class="photoLina">
@@ -63,14 +74,14 @@
     </section>
     <section id="cards">    <!-- comienzo de las cards -->
         <div class="projects-body">
-            <div class="Projects">PROJECTS</div>
+            <div class="Projects">PROJECTOS</div>
             <div class="grid-container">
                 <!-- Card 1 -->
                 <div class="card">
                     <img src="./Inmobiliaria-Blonplad.png" alt="Proyecto 1" />
                     <div class="card-content">
                         <h3>Inmobiliaria Blonplad</h3>
-                        <p>Project for IdForIdeas. Role: Backend Developer</p>
+                        <p>Proyecto donde me desempeñé como desarrollador backend, por medio de la creacion de API</p>
                         <div class="card-buttons">
                             <a href="https://bonpland.vercel.app/" target="_blank"><button class="btn1">Project</button></a>
                             <a href="https://github.com/LinaAlvaradoSosa/Bonpland" target="_blank"><button class="btn-secondary">API</button></a>
@@ -82,7 +93,7 @@
                     <img src="./Trucupey-pantallazo.png" alt="Proyecto 2" />
                     <div class="card-content">
                         <h3>Trucupey</h3>
-                        <p>E-commerce for Juancito Trucupey. Role: Backend and Frontend Developer</p>
+                        <p>E-commerce de Juancito Trucupey. Desempeñé el rol de desarrollador frontend y backend.</p>
                         <div class="card-buttons">
                             <a href="https://github.com/LinaAlvaradoSosa/Trucupey-Angular" target="_blank"><button class="btn1">Project</button></a>
                             <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary">API</button></a>
@@ -94,7 +105,7 @@
                     <img src="./Clothes-Clothes-Clothes.png" alt="Proyecto 3" />
                     <div class="card-content">
                         <h3>Clothes-Clothes-Clothes</h3>
-                        <p>E-commerce of second-hand clothing. Role: Backend and Fronted Developer</p>
+                        <p>E-commerce de una tienda de ropa de segunda mano. Desempene el rol de desarrollador Backend and Fronted.</p>
                         <div class="card-buttons">
                         <a href="https://clothesclothesclothes.netlify.app/" target="_blank"><button class="btn1">Project</button></a>
                         <a href="https://github.com/LinaAlvaradoSosa/Clothes-API" target="_blank"><button class="btn-secondary" target="_blank">API</button></a>
@@ -118,7 +129,7 @@
     </section>
     <section id="contacto">
         <footer>
-            <div class="contact">Let's talk!</div>
+            <div class="contact">Contactame!</div>
             <div>
                 <div class="footer-2">
                     <a href="https://www.linkedin.com/in/linaalvaradososa-developer-fullstack/" target="_blank"><img class="social-footer" src="./social.png" alt="LinkedIn"></a>
@@ -127,7 +138,7 @@
                 </div>
                 <div class="logo-container">
                     <a href="#presentacion"><img class="logo-footer navLink" src="./Logo2.png" alt=""></a>
-                    <div class="info-final">Thank you for visiting my portfolio</div>
+                    <div class="info-final">Gracias por visitar mi portafolio</div>
                 </div>
             </div>
         </footer>
